crates/carta/tests/snapshots/golden_writer__man__table__table-aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l r c l.
T{
l
T}@T{
r
T}@T{
c
T}@T{
d
T}
_
T{
1
T}@T{
2
T}@T{
3
T}@T{
4
T}
.TE
