crates/carta/tests/snapshots/golden_writer__man__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
First caption paragraph
.PD 0
.P
.PD
Second caption paragraph
.TS
tab(@);
l.
T{
h
T}
_
T{
v
T}
.TE
