crates/carta/tests/snapshots/golden_writer__man__table__table-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
A caption for the table
.TS
tab(@);
l.
T{
h
T}
_
T{
v
T}
.TE
