crates/carta/tests/snapshots/golden_writer__man__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l.
T{
left
T}@T{
right
T}
_
T{
x
T}@T{
T}
T{
T}@T{
y
T}
.TE
