crates/carta/tests/snapshots/golden_writer__man__table__table-cell-boundary-space.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l l.
T{
col1
T}@T{
col2
T}@T{
col3
T}
_
T{
\ a
T}@T{
spaced text
T}@T{
trailing
T}
.TE
