crates/carta/tests/snapshots/golden_writer__man__table__table-cell-linebreak.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l.
T{
product
T}@T{
note
T}
_
T{
multi
.PD 0
.P
.PD
line cell
T}@T{
plain
T}
.TE
