crates/carta/tests/snapshots/golden_writer__man__table__table-colspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.PP
.TS
tab(@);
l l.
T{
wide
T}@T{
T}
T{
a
T}@T{
b
T}
.TE
